--- a/bin/gui/cadastro.fxml
+++ b/bin/gui/cadastro.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.lang.*?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -10,39 +11,65 @@
     <MenuBar layoutX="0.0" layoutY="1.0" prefHeight="27.0" prefWidth="600.0">
       <menus>
         <Menu mnemonicParsing="false" text="Home" />
+        <Menu mnemonicParsing="false" text="Consumo">
+          <items>
+            <MenuItem mnemonicParsing="false" text="Novo" />
+          </items>
+        </Menu>
         <Menu mnemonicParsing="false" text="Cadastros">
           <items>
-            <MenuItem mnemonicParsing="false" text="Delete" />
+            <MenuItem mnemonicParsing="false" text="Cliente" />
+            <MenuItem mnemonicParsing="false" text="Associaçao" />
+            <MenuItem mnemonicParsing="false" text="Responsavel" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Ordens">
           <items>
-            <MenuItem mnemonicParsing="false" text="About" />
+            <MenuItem mnemonicParsing="false" text="Ordem de serviço" />
+            <MenuItem mnemonicParsing="false" text="Ordem de compra" />
+          </items>
+        </Menu>
+        <Menu mnemonicParsing="false" text="Relatorios">
+          <items>
+            <MenuItem mnemonicParsing="false" text="Por cliente" />
+            <MenuItem mnemonicParsing="false" text="Por associaçao" />
           </items>
         </Menu>
         <Menu mnemonicParsing="false" text="Configuraçoes">
           <items>
-            <MenuItem mnemonicParsing="false" text="Action 1" />
+            <MenuItem mnemonicParsing="false" text="Tarifa" />
           </items>
         </Menu>
       </menus>
     </MenuBar>
-    <GridPane layoutX="14.0" layoutY="36.0" prefHeight="88.0" prefWidth="572.0">
+    <GridPane layoutY="36.0" prefHeight="164.0" prefWidth="572.0" AnchorPane.rightAnchor="14.0">
       <children>
         <TextField prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label text="Nº do cliente:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Label text="Nome do Cliente:" GridPane.columnIndex="1" GridPane.rowIndex="0" />
-        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+        <Label text="Nome do Cliente:" GridPane.columnIndex="1" GridPane.rowIndex="0">
+          <GridPane.margin>
+            <Insets left="10.0" fx:id="x1" />
+          </GridPane.margin>
+        </Label>
+        <TextField prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="1" />
+        <TextField prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+          <GridPane.margin>
+            <Insets left="10.0" right="150.0" />
+          </GridPane.margin>
+        </TextField>
         <TextField prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
         <Label text="Data de Nascimento:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <Label text="RG:" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+        <Label text="CPF:" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="2" />
+        <Label text="Telefone:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
+        <TextField prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="5" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="339.0" minWidth="10.0" prefWidth="143.0" />
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="429.0" minWidth="10.0" prefWidth="429.0" />
       </columnConstraints>
       <rowConstraints>
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
