--- a/src/gui/main.fxml
+++ b/src/gui/main.fxml
@@ -10,7 +10,7 @@
   <children>
     <MenuBar layoutX="0.0" layoutY="1.0" prefHeight="27.0" prefWidth="600.0">
       <menus>
-        <Menu mnemonicParsing="false" text="Home" />
+        <Menu mnemonicParsing="false" onAction="#onMenuHomeSelect" onMenuValidation="#onMenuHomeSelect" text="Home" fx:id="menuHome" />
         <Menu mnemonicParsing="false" text="Consumo">
           <items>
             <MenuItem mnemonicParsing="false" text="Novo" />
@@ -19,7 +19,7 @@
         <Menu mnemonicParsing="false" text="Cadastros">
           <items>
             <MenuItem mnemonicParsing="false" onAction="#onMenuItemClienteSelect" text="Cliente" fx:id="menuItemCliente" />
-            <MenuItem mnemonicParsing="false" text="Associaçao" />
+            <MenuItem mnemonicParsing="false" onAction="#onMenuItemAssociacaoSelect" text="Associaçao" fx:id="menuItemAssociacao" />
             <MenuItem mnemonicParsing="false" text="Responsavel" />
           </items>
         </Menu>
