--- a/src/gui/Responsavel.fxml
+++ b/src/gui/Responsavel.fxml
@@ -6,26 +6,26 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gui.AssociacaoFormController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gui.ResponsavelFormController">
   <children>
     <GridPane layoutY="36.0" prefHeight="164.0" prefWidth="572.0" AnchorPane.rightAnchor="14.0">
       <children>
-        <TextField id="textNumCliente" fx:id="textNomeAssociacao" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField id="textNumCliente" fx:id="textNomeResponsavel" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label text="Nome:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Label text="Logradoro:" GridPane.columnIndex="1" GridPane.rowIndex="0">
+        <Label text="Data de Nascimento:" GridPane.columnIndex="1" GridPane.rowIndex="0">
           <GridPane.margin>
             <Insets left="10.0" fx:id="x1" />
           </GridPane.margin>
         </Label>
-        <TextField id="btCancelar" fx:id="textLogradoro" prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="1" />
-        <TextField id="textCPF" fx:id="textQtdFamilias" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <TextField id="btCancelar" fx:id="textDataNascimento" prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="1" />
+        <TextField fx:id="textCPF" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
           <GridPane.margin>
             <Insets left="10.0" right="150.0" />
           </GridPane.margin>
         </TextField>
-        <TextField id="textDataNascimento" fx:id="textDistrito" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
-        <Label text="Distrito:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
-        <Label text="Quantidade de Familias:" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="2" />
+        <TextField id="textDataNascimento" fx:id="textEndereco" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
+        <Label text="Endereço" GridPane.columnIndex="0" GridPane.rowIndex="2" />
+        <Label text="CPF:" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="2" />
         <Label text="Observaçoes:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
         <TextField id="textTelefone" fx:id="textObservacao" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="5" />
       </children>
