--- a/src/gui/Main.fxml
+++ b/src/gui/Main.fxml
@@ -31,7 +31,7 @@
         </Menu>
         <Menu mnemonicParsing="false" text="Relatorios">
           <items>
-            <MenuItem mnemonicParsing="false" text="Por cliente" />
+            <MenuItem mnemonicParsing="false" onAction="#onMenuItemTabelaClienteSelect" text="Clientes" fx:id="menuItemTabelaCliente" />
             <MenuItem mnemonicParsing="false" text="Por associaçao" />
           </items>
         </Menu>
