--- a/src/gui/Cliente.fxml
+++ b/src/gui/Cliente.fxml
@@ -1,35 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="gui.ClienteFormController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.ClienteFormController">
   <children>
     <GridPane layoutY="36.0" prefHeight="164.0" prefWidth="572.0" AnchorPane.rightAnchor="14.0">
       <children>
-        <TextField fx:id="textNumCliente" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
+        <TextField fx:id="txtId" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="1" />
         <Label text="Nº do cliente:" GridPane.columnIndex="0" GridPane.rowIndex="0" />
         <Label text="Nome do Cliente:" GridPane.columnIndex="1" GridPane.rowIndex="0">
           <GridPane.margin>
             <Insets left="10.0" fx:id="x1" />
           </GridPane.margin>
         </Label>
-        <TextField id="btCancelar" fx:id="textNomeCliente" prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="1" />
-        <TextField fx:id="textCPF" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
+        <TextField id="btCancelar" fx:id="txtName" prefWidth="200.0" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="1" />
+        <TextField fx:id="txtCPF" prefWidth="218.0" GridPane.columnIndex="1" GridPane.rowIndex="3">
           <GridPane.margin>
             <Insets left="10.0" right="150.0" />
           </GridPane.margin>
         </TextField>
-        <TextField fx:id="textDataNascimento" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="3" />
         <Label text="Data de Nascimento:" GridPane.columnIndex="0" GridPane.rowIndex="2" />
         <Label text="CPF:" GridPane.columnIndex="1" GridPane.margin="$x1" GridPane.rowIndex="2" />
         <Label text="Telefone:" GridPane.columnIndex="0" GridPane.rowIndex="4" />
-        <TextField fx:id="textTelefone" prefWidth="200.0" GridPane.columnIndex="0" GridPane.rowIndex="5" />
-        <TextField id="textTelefone" fx:id="textAssociacao" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
         <Label text="Associaçao:" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <DatePicker fx:id="txtDataNascimento" GridPane.rowIndex="3" />
+            <ComboBox fx:id="comboBoxAssociacao" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
       </children>
       <columnConstraints>
         <ColumnConstraints hgrow="SOMETIMES" maxWidth="339.0" minWidth="10.0" prefWidth="143.0" />
@@ -46,8 +50,8 @@
     </GridPane>
     <GridPane layoutX="21.0" layoutY="364.0" prefHeight="22.0" prefWidth="572.0">
       <children>
-        <Button fx:id="btCancelar" mnemonicParsing="false" onAction="#onBtCancelar" text="Cancelar" GridPane.columnIndex="0" GridPane.rowIndex="0" />
-        <Button fx:id="btSalvar" mnemonicParsing="false" onAction="#onBtSalvar" text="Salvar" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+        <Button fx:id="btCancelar" mnemonicParsing="false" onAction="#onBtCanelAction" text="Cancelar" GridPane.columnIndex="0" GridPane.rowIndex="0" />
+        <Button fx:id="btSalvar" mnemonicParsing="false" onAction="#onBtSaveAction" text="Salvar" GridPane.columnIndex="1" GridPane.rowIndex="0" />
         <Button fx:id="btSair" mnemonicParsing="false" onAction="#onBtSair" text="Sair" GridPane.columnIndex="2" GridPane.rowIndex="0" />
       </children>
       <columnConstraints>
